[package]
name = "tg-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
secrecy = { version = "0.10.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = { version = "0.4.0", default-features = false }
rpassword = "7.3.1"
mime = "0.3.17"
mime_guess = "2.0.5"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
